# gdcontest

admin/: index.html  package-lock.json  package.json
admin/src/: App.jsx  callApi.js  main.jsx
admin/src/routes/: ContestDetail.jsx  ContestList.jsx  GraphDetail.jsx  GraphList.jsx  Root.jsx
api/: Cargo.toml  Dockerfile  sqlx-data.json
api/migrations/: 20230717095844_init.down.sql  20230717095844_init.up.sql  20230810144658_add_users.up.sql
api/sql/admin_users/: find.sql
api/sql/contests/: admin_delete.sql  admin_find.sql  admin_find_all.sql  admin_save.sql  find.sql  find_all.sql  save.sql
api/sql/graphs/: admin_find_all.sql  admin_find_distance.sql  delete.sql  find.sql  find_all.sql  find_content.sql  find_distance.sql  find_meta.sql  save.sql
api/sql/submissions/: delete.sql  find.sql  find_all.sql  find_all_by_user.sql  find_content.sql  find_standings.sql  save.sql
api/sql/users/: save.sql
api/src/: auth.rs  error.rs  graph.rs  handlers.rs  lib.rs  main.rs
api/src/handlers/: contest.rs  graph.rs  mod.rs  submission.rs  user.rs
api/src/models/: admin_user.rs  contest.rs  graph.rs  mod.rs  submission.rs
api/src/repositories/: admin_user.rs  contest.rs  graph.rs  mod.rs  submission.rs  user.rs
client/: api.js  package-lock.json  package.json  standings.js
client/components/: Layout.js  Section.js
client/pages/: _app.js  _document.js  index.js
client/pages/api/images/: [submissionId].js
client/pages/api/submissions/[contestName]/: [graphName].js
client/pages/contests/[contestName]/: [graphName].js  index.js
(+3 files in other folders)
