[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alcoholic_jwt = "4091.0.0"
async-trait = "0.1"
axum = "0.6"
axum-auth = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
ordered-float = "3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "offline", "chrono"] }
tokio = { version = "1.29", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }